# notes

./: .gitignore  README.md  Untitled.ipynb  Untitled1.ipynb  pyproject.toml  requirements.txt
JS/: you-dont-know-js-notes.ru.md
PHP/: notes.ipynb
PHP/umi.cms/: 404.md  (+5 more)
algorithms/: 00_simple_recursion.ipynb  01_simple.ipynb  python-programming.ipynb  stepik.ipynb
architecture/: notes.md
codewars/: python.ipynb
coding/: FastAPI.md  HTTP.md  REST.md  github_trends.md  microservices.md  naming.md  pydantic.md  python-collections.md  python-interviews.ipynb  python-snippets.md  python3.9-new.md  sqlalchemy.md  you-dont-know-js-notes.ru.md
dev/: REST.md  docker.md  golang.md  http.md  macos.md  microservices.md  naming.md  postgresql.md  python.md  rest & http.md  sandbox.ipynb  security.md  semver.md  software.md  sqlalchemy.md  you-dont-know-js-notes.ru.md
devops/: docker.md
golang/: notes.md
interviews/: 2021.ipynb  2022.ipynb  js-react.md  js-tasks.md  tips.md  to_solve.ipynb
leetcode/: easy.ipynb
life/: recipes.md
linux/: commands.md  htaccess.md  notes.md
management/: 1to1.md
ops/: bash_images.md  cloud.md  docker.md  linux.md
parsers/: example.ipynb
personal/: Медитация.md
playground/: fastapi.ipynb  leetcode.ipynb  pydantic.ipynb  sqlalchemy.ipynb
posts/: pip-tools-multiple-environments.md  prometheus-multiprocessing.md  pydantic-prevent-type-coercion-in-union.md  pydantic-two-way-mapping.md
presentastions/: pydantic2.ipynb
python/: django-notes.md  environment.md  hangman_debug.ipynb  interview.ipynb  notes.ipynb  pytest.md
(+23 files in other folders)
